--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>LAB | Flappy Birds</title>
   </head>
   <body>
-    <img src="./images/logo.png" alt="" style="width:50%;" />
-    <br />
+    <div id="title">
+      <img src="./images/logo.png" alt="" style="width:50%;" />
+    <br>
     <button id="start-button">StartGame</button>
+    </div>
     <div id="game-board">
       <canvas id="my-canvas"></canvas>
     </div>
